--- a/Atelier_Connexion/mainwindow.ui
+++ b/Atelier_Connexion/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1175</width>
-    <height>632</height>
+    <height>626</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -49,14 +49,14 @@ QPushButton:pressed
       <x>0</x>
       <y>0</y>
       <width>1211</width>
-      <height>581</height>
+      <height>561</height>
      </rect>
     </property>
     <property name="styleSheet">
      <string notr="true"/>
     </property>
     <property name="currentIndex">
-     <number>2</number>
+     <number>0</number>
     </property>
     <widget class="QWidget" name="tab">
      <attribute name="title">
@@ -1027,6 +1027,19 @@ background-color: rgb(255, 255, 255);</string>
       </property>
       <property name="text">
        <string>-</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="image">
+      <property name="geometry">
+       <rect>
+        <x>640</x>
+        <y>190</y>
+        <width>93</width>
+        <height>28</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>image</string>
       </property>
      </widget>
     </widget>
