integration_with_interface

--- a/login.ui
+++ b/login.ui
@@ -16,10 +16,10 @@
   <widget class="QPushButton" name="pushButton_3">
    <property name="geometry">
     <rect>
-     <x>630</x>
-     <y>240</y>
+     <x>420</x>
+     <y>430</y>
      <width>171</width>
-     <height>31</height>
+     <height>41</height>
     </rect>
    </property>
    <property name="styleSheet">
@@ -48,14 +48,14 @@ QPushButton:hover
 QPushButton:pressed</string>
    </property>
    <property name="text">
-    <string>Mot de passe oublier </string>
+    <string>Mot de passe oublié</string>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton_2">
    <property name="geometry">
     <rect>
-     <x>630</x>
-     <y>190</y>
+     <x>620</x>
+     <y>370</y>
      <width>171</width>
      <height>31</height>
     </rect>
@@ -92,7 +92,7 @@ QPushButton:pressed</string>
   <widget class="QGroupBox" name="groupBox">
    <property name="geometry">
     <rect>
-     <x>160</x>
+     <x>400</x>
      <y>60</y>
      <width>371</width>
      <height>301</height>
@@ -109,7 +109,7 @@ QPushButton:pressed</string>
      <rect>
       <x>20</x>
       <y>60</y>
-      <width>201</width>
+      <width>251</width>
       <height>31</height>
      </rect>
     </property>
@@ -179,13 +179,16 @@ background-color: rgb(255, 255, 255);</string>
      <string notr="true">border-radius: 10px;
 background-color: rgb(255, 255, 255);</string>
     </property>
+    <property name="echoMode">
+     <enum>QLineEdit::Password</enum>
+    </property>
    </widget>
   </widget>
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
-     <x>630</x>
-     <y>140</y>
+     <x>420</x>
+     <y>370</y>
      <width>171</width>
      <height>31</height>
     </rect>
@@ -219,6 +222,24 @@ QPushButton:pressed</string>
     <string>Se connecter</string>
    </property>
   </widget>
+  <widget class="QLabel" name="back">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>0</y>
+     <width>891</width>
+     <height>491</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <zorder>back</zorder>
+  <zorder>pushButton_3</zorder>
+  <zorder>pushButton_2</zorder>
+  <zorder>groupBox</zorder>
+  <zorder>pushButton</zorder>
  </widget>
  <resources/>
  <connections/>
