--- a/seance_equippements/mainwindow.ui
+++ b/seance_equippements/mainwindow.ui
@@ -380,6 +380,19 @@ QPushButton:pressed{
         </rect>
        </property>
       </widget>
+      <widget class="QPushButton" name="pushButton">
+       <property name="geometry">
+        <rect>
+         <x>220</x>
+         <y>360</y>
+         <width>93</width>
+         <height>28</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
      </widget>
      <widget class="QLabel" name="label_3">
       <property name="geometry">
